feat: 修改图片路径

--- a/src/blogs/V8引擎/V8原理/2. async、await原理.md
+++ b/src/blogs/V8引擎/V8原理/2. async、await原理.md
@@ -44,7 +44,7 @@ console.log('main 4')
 
 上面那段代码的协程执行流程图如下
 
-<img src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/V8引擎/生成器原理.webp"  height="400px" />
+<img src="https://github.com/zygg1512/myBlog/raw/master/assets/V8引擎/生成器原理.webp"  height="400px" />
 
 从图中可以看出来协程的四点规则：
 1. 通过调用生成器函数`genDemo`来创建一个协程`gen`，创建之后，`gen`协程并没有立即执行。
@@ -125,7 +125,7 @@ console.log(3)
 
 下图是上述代码的执行流程
 
-<img src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/V8引擎/async执行原理.webp" height="400px" />
+<img src="https://github.com/zygg1512/myBlog/raw/master/assets/V8引擎/async执行原理.webp" height="400px" />
 
 1. 首先，执行`console.log(0)`这个语句，打印出来`0`。
 2. 紧接着就是执行`foo`函数，由于`foo`函数是被`async`标记过的，所以当进入该函数的时候，V8 引擎新建并启动协程。
