--- a/src/blogs/前端基础/TypeScript/2. 高级类型/4. keyof 关键字.md
+++ b/src/blogs/前端基础/TypeScript/2. 高级类型/4. keyof 关键字.md
@@ -105,7 +105,7 @@ interface A {
 
 type C = keyof A
 ```
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/typescript/keyof原始.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/typescript/keyof原始.png" />
 
 如果想要显示`C`的实际类型，则可以通过下面的方式
 ```typescript
@@ -118,4 +118,4 @@ interface A {
 
 type C = DirectKeys<keyof A>
 ```
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/typescript/keyof拆解.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/typescript/keyof拆解.png" />
