--- a/src/blogs/前端基础/自动化测试/Jest/1. 快照测试.md
+++ b/src/blogs/前端基础/自动化测试/Jest/1. 快照测试.md
@@ -77,7 +77,7 @@ Object {
 
 失败的快照也可以在监听模式下交互式的更新
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/交互式快照模式.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/交互式快照模式.png" />
 
 - u：更新失败用例的快照
 - i：一个一个的查看失败用例，进入该模式后，可以继续输入如下内容
