--- a/src/blogs/前端基础/自动化测试/单元测试和集成测试.md
+++ b/src/blogs/前端基础/自动化测试/单元测试和集成测试.md
@@ -52,17 +52,17 @@ function foo(a){
 ### 怎样写单测
 #### 单测的原则：FIRST
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/单测的原则.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/单测的原则.png" />
 
 #### 单测需要测什么：RIGHT BICEP!
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/单测需要测什么.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/单测需要测什么.png" />
 
 ##### 结果正确
 这个是最基本的检查，如果单测的运行结果都不正确，那其他的都免谈。
 ##### 边界条件检查
 边界检查尤为重要，很多错误都是发生在边界上。边界检查遵循 CORRECT
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/边界条件检查.webp" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/边界条件检查.webp" />
 
 - 有序性：如果一组值是有序的，那么在向其中删除或者添加时，需要校验这组值是否仍然是有序的
 - 引用/耦合性：对于类的状态、其他对象的状态等需要做一些假设，程序员就需要对代码进行测试，保证在假设未满足的情况下运行良好。
@@ -97,7 +97,7 @@ function foo(a){
 4. 优化代码，完成开发
 5. 当需要开发新需求新功能时，重复上述步骤
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/TDD开发流程.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/TDD开发流程.png" />
 
 ##### TDD的优势
 
