--- a/src/blogs/常用命令/Linux/文件命令.md
+++ b/src/blogs/常用命令/Linux/文件命令.md
@@ -19,7 +19,7 @@ lrwxr-xr-x  3 xxx  		staff  96     5  3 16:25 					bin -> usr/bin
 
 ### 权限相关
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/linux/文件权限.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/linux/文件权限.png" />
 
 在Linux中第一个字符代表这个文件是目录、文件或链接文件等等：
 
@@ -250,7 +250,7 @@ chmod +x index.html
 ```
 
 ### 三种使用模式
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/linux/vim工作模式.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/linux/vim工作模式.png" />
 
 基本上 vi/vim 共分为三种模式，分别是
 - **命令模式（Command mode）**
