--- a/src/blogs/计算机基础/HTTP/HTTP发展史/4. HTTP3.md
+++ b/src/blogs/计算机基础/HTTP/HTTP发展史/4. HTTP3.md
@@ -5,7 +5,7 @@ HTTP/2 存在一些比较严重的与 TCP 协议相关的缺陷，但由于 TCP 
 
 因此，HTTP/3 选择了一个折衷的方法——UDP 协议，基于 UDP 实现了类似于 TCP 的多路数据流、传输可靠性等功能，我们把这套功能称为 QUIC 协议。关于 HTTP/2 和 HTTP/3 协议栈的比较，可以参考下图：
 
-<img src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/http/http发展史/quic协议.webp" height="300px" />
+<img src="https://github.com/zygg1512/myBlog/raw/master/assets/http/http发展史/quic协议.webp" height="300px" />
 
 通过上图我们可以看出，HTTP/3 中的 QUIC 协议集合了以下几点功能
 ## HTTP/3特点
@@ -16,7 +16,7 @@ HTTP/2 存在一些比较严重的与 TCP 协议相关的缺陷，但由于 TCP 
 ### 实现了 HTTP/2 中的多路复用功能
 **和 TCP 不同，QUIC 实现了在同一物理连接上可以有多个独立的逻辑数据流。实现了数据流的单独传输，就解决了 TCP 中队头阻塞的问题。**
 
-<img src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/http/http发展史/quic通信.webp" />
+<img src="https://github.com/zygg1512/myBlog/raw/master/assets/http/http发展史/quic通信.webp" />
 
 ### 实现了快速握手功能
 由于 QUIC 是基于 UDP 的，所以 QUIC 可以实现使用 0-RTT 或者 1-RTT 来建立连接，这意味着 QUIC 可以用最快的速度来发送和接收数据，这样可以大大提升首次打开页面的速度。
