--- a/src/blogs/前端基础/自动化测试/Jest/5. Mock测试.md
+++ b/src/blogs/前端基础/自动化测试/Jest/5. Mock测试.md
@@ -403,5 +403,5 @@ test('测试', () => {
 ```
 输出如下内容
 
-<img height="300px" src="https://gitee.com/CwdyBic/myBlog/raw/master/assets/自动化测试/requireMock.png" />
+<img height="300px" src="https://github.com/zygg1512/myBlog/raw/master/assets/自动化测试/requireMock.png" />
 
