--- a/src/blogs/V8引擎/JavaScript设计思想/3. IEEE-754标准.md
+++ b/src/blogs/V8引擎/JavaScript设计思想/3. IEEE-754标准.md
@@ -8,6 +8,7 @@
   - 具体做法是：用 2 乘十进制小数，可以得到积，将积的整数部分取出，再用 2 乘余下的小数 部分，又得到一个积，再将积的整数部分取出，如此进行，直到积中的小数部分为零，或者达到所要求的精度为止。然后把取出的整数部分按顺序排列起来，先取的整数作为二进制小数的高位有效位，后取的整数作为低位有效位。
 
 如下图，将十进制`173.8125`转换为二进制：
+
 <img src="https://github.com/zygg1512/myBlog/raw/master/assets/V8引擎/十进制转换二进制.png" height="400px" />
 
 
@@ -49,11 +50,13 @@ V = (-1)^S * 2^(E - 1023) * (F + 1)
 ```
 #### 小数部分的舍入问题
 上面这个例子中，小数部分不存在舍入的问题（位数小于52位），那么如果小数超出了52位，有以下几种情况：
+```txt
 1. 第 53 位是 0，无需处理。
 2. 第53位是 1 且 53 位之后全是 0：
-  1. 若第 52 位是 0，无需处理。
-  2. 若第 52 位是 1，那么向上舍入。
+  2-1. 若第 52 位是 0，无需处理。
+  2-2. 若第 52 位是 1，那么向上舍入。
 3. 第 53 位是 1，且之后不全是 0：那么向上舍入。
+```
 
 再看一个例子，计算`23.3`的双精度浮点数：
 
