--- a/src/blogs/Service/Docker/Docker 基本用法/1. Docker概述.md
+++ b/src/blogs/Service/Docker/Docker 基本用法/1. Docker概述.md
@@ -3,7 +3,7 @@
 ### 什么是虚拟机
 通过添加一个**虚拟机监视器 ( Virtual Machine Monitor )** 来隔离操作系统与硬件或者应用程序和操作系统，以此达到虚拟化的目的。这个夹在其中的虚拟机监视器，常常被称为 **Hypervisor**
 
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1651806757059-c3f98194-3c07-4b91-b1eb-0d775b7bb5e0.png#clientId=ucd9fef77-2217-4&from=paste&height=391&id=uaf7835e2&originHeight=602&originWidth=531&originalType=binary&ratio=1&rotation=0&showTitle=false&size=438470&status=done&style=none&taskId=u17cee9ae-da30-47e3-b07d-34da32f67a8&title=&width=344.5)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/虚拟机架构图.png" height="300px" />
 
 通过**虚拟机监视器**隔离每个应用程序和操作系统，将应用程序的指令转换为当前宿主操作系统能执行的指令，从而做到不需要修改应用程序就可以执行的目的。也正是这个原因，**这些语言的程序都具有非常强的跨平台性**
 
@@ -19,7 +19,7 @@
 
 由于应用程序的运行被隔离在一个独立的运行环境之中，这个独立的运行环境就好似一个容器，包裹住了应用程序，这就是容器技术名字的由来
 
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1651806773940-5a4ffa93-8eab-43cd-99bd-08b283b1534a.png#clientId=ucd9fef77-2217-4&from=paste&height=235&id=ub116770f&originHeight=443&originWidth=522&originalType=binary&ratio=1&rotation=0&showTitle=false&size=288478&status=done&style=none&taskId=u769e7a51-c335-40f5-a57f-8ca5a841f32&title=&width=277)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/容器架构图.png" height="300px" />
 
 #### 为什么容器技术能火
 很重要的一个原因是其在运行性能上要远超虚拟机等其他虚拟化实现。更甚一步说，**运行在容器虚中的应用程序，在运行效率上与真实运行在物理平台上的应用程序不相上下**
@@ -28,7 +28,7 @@
 
 更准确的来说，所有在容器中的应用程序其实**完全运行在了宿主操作系统**中，与其他真实运行在**宿主操作系统**中的应用程序在指令运行层面是完全没有任何区别的
 
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1651806725266-31ac0f2f-3850-4de0-ac4b-56b0af443ddd.png#clientId=ucd9fef77-2217-4&from=paste&height=351&id=u484e5a4e&originHeight=478&originWidth=886&originalType=binary&ratio=1&rotation=0&showTitle=false&size=323891&status=done&style=none&taskId=ue2e50da7-9029-499f-b056-d4645ba4f9d&title=&width=650)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/虚拟机与容器架构图.png" height="300px" />
 
 相应的由于没有了**虚拟操作系统**和**虚拟机监视器**这两层，也导致容器技术的跨平台能力大打折扣
 ## Docker
@@ -40,7 +40,7 @@ Docker 是基于Go语言实现的云开源项目
 
 其次，在宿主操作系统之上添加一个 Docker 引擎，通过 Docker 引擎可以将应用打包成镜像。通过镜像将应用运行在不同操作系统的 Dokcer 中，也就是说 Docker 自身具备跨平台能力
 
-![image.png](https://cdn.nlark.com/yuque/0/2022/png/26943751/1651979699578-1a6b3394-d9f4-47ce-aa1c-4829fba70ca7.png#clientId=u89df61dc-a921-4&from=paste&height=201&id=GQDQt&originHeight=630&originWidth=1239&originalType=binary&ratio=1&rotation=0&showTitle=false&size=127397&status=done&style=none&taskId=u07af21bb-8a65-407c-9c98-75bd9686051&title=&width=396)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/docker架构.png" height="300px" />
 
 ### Docker 优点
 #### 更快、更一致的交付你的应用程序
@@ -103,7 +103,7 @@ Docker 的实现，主要归结于三大技术：
 
 AUFS ( Advanced Union File System )**是一种分层、轻量级、高性能的文件系统，它支持对文件系统的修改作为一次提交来一层层的叠加，同时可以把不同物理位置的目录合并到同一个目录中**
 
-![](https://cdn.nlark.com/yuque/0/2022/webp/26943751/1651982162206-90b05849-efff-4639-aa97-6d1fff5aa1fe.webp#clientId=u89df61dc-a921-4&from=paste&height=770&id=u9baa18dc&originHeight=770&originWidth=1200&originalType=url&ratio=1&rotation=0&showTitle=false&status=done&style=none&taskId=u9d1e8f9f-cea1-41fc-977e-6b3215dc291&title=&width=1200)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/docker-aufs.png" height="300px" />
 
 AUFS 将文件的更新挂载到老的文件之上，而不去修改那些不更新的内容，这就意味着即使虚拟的文件系统被反复修改，也能保证对真实文件系统的空间占用保持一个较低水平
 
@@ -130,13 +130,13 @@ AUFS 将文件的更新挂载到老的文件之上，而不去修改那些不更
 - **数据卷模块**
 - **网络模块**
 
-![](https://cdn.nlark.com/yuque/0/2022/webp/26943751/1652064850473-e5a5b3b0-df70-4067-afa6-1ef86a84c3c0.webp#clientId=u598e5284-ad42-4&from=paste&height=198&id=uf8e3ee0d&originHeight=499&originWidth=1304&originalType=url&ratio=1&rotation=0&showTitle=false&status=done&style=none&taskId=u6608418c-f629-4560-a757-cb4b31322c0&title=&width=518)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/docker-daemon.png" height="300px" />
 
 在操作系统里，**docker daemon 通常以服务的形式运行以便静默的提供这些功能，所以我们也通常称之为 Docker 服务。**它向外暴露了一套** RESTful API**，我们能够通过这套接口对 docker daemon 进行操作。或者更确切的说，是通过这套 RESTful API 对 docker daemon 中运行的容器和其他资源进行管理。
 
 通常来说，是采用在终端输入命令来控制 docker daemon 的，那么问题来了，如果在终端中编写一个 HTTP 请求以借助 docker daemon 提供的 RESTful API 来操控它，那显然是个费脑、费手又费时间的活儿。所以在 Docker Engine 里还直接附带了 docker CLI 这个控制台程序。
 
-![](https://cdn.nlark.com/yuque/0/2022/webp/26943751/1652065128002-026a27f6-d598-4bd7-84fa-553dcf107de9.webp#clientId=u598e5284-ad42-4&from=paste&height=210&id=u13879066&originHeight=437&originWidth=1304&originalType=url&ratio=1&rotation=0&showTitle=false&status=done&style=none&taskId=ub86ec945-9136-40b7-9570-6e97f841430&title=&width=626)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/Docker-Engine.png" height="300px" />
 
 **docker daemon 和 docker CLI 所组成的，正是一个标准 C/S ( Client-Server ) 结构的应用程序**。衔接这两者的，正是 docker daemon 所提供的这套 RESTful API
 ### Docker Desktop 的实现原理
@@ -148,7 +148,7 @@ AUFS 将文件的更新挂载到老的文件之上，而不去修改那些不更
 
 Docker for Windows 和 Docker for Mac 这里利用了这两个操作系统提供的功能来搭建一个虚拟 Linux 系统，并在其之上安装和运行 docker daemon。
 
-![](https://cdn.nlark.com/yuque/0/2022/webp/26943751/1652064485911-772605bd-438c-41f2-a1f8-ea2595f2107c.webp#clientId=u598e5284-ad42-4&from=paste&height=491&id=uf1799674&originHeight=491&originWidth=1304&originalType=url&ratio=1&rotation=0&showTitle=false&status=done&style=none&taskId=ubccd6e16-47c7-4e94-ad68-054faa70910&title=&width=1304)
+<img src="https://github.com/zygg1512/myBlog/raw/master/images/Service/docker-desktop.png" height="300px" />
 
 除了搭建 Linux 系统并运行 docker daemon 之外，Docker Desktop 系列最突出的一项功能就是能够直接通过 PowerShell、Terminal 这类的控制台软件在 Windows 和 macOS 中直接操作虚拟 Linux 系统中运行的 docker daemon。
 
