--- a/src/blogs/Node/数据库/分库分表.md
+++ b/src/blogs/Node/数据库/分库分表.md
@@ -13,7 +13,7 @@
 - **垂直（纵向）切分**
 - **水平（横向）切分**
 ## 垂直切分
-**垂直切分又可以分为: 垂直分库和垂直分表。**
+**垂直切分又可以分为：垂直分库和垂直分表。**
 
 垂直切分的最大特点就是规则简单，实施也更为方便，对应用程序的影响也更小，尤其适合各业务之间的耦合度非常低、相互影响非常小、业务逻辑非常清晰的系统。
 
@@ -24,7 +24,7 @@
 
 <img src="https://github.com/zygg1512/myBlog/raw/master/images/数据库/垂直分库.png" height="300px" />
 
-一开始是单体服务，所以只有一个数据库，所有的表都在这个库里。后来因为业务需求,单体服务变成微服务治理。所以将之前的一个商品库，拆分成多个数据库。每个微服务对于一个数据库。
+一开始是单体服务，所以只有一个数据库，所有的表都在这个库里。后来因为业务需求,单体服务变成微服务治理。所以将之前的一个商品库，拆分成多个数据库。每个微服务对应一个数据库。
 ### 垂直分表
 **按列切分；将一个表按照字段分成多表，每个表存储其中一部分字段**
 
@@ -42,7 +42,7 @@
 
 - 解决业务系统层面的耦合，业务清晰
 - 与微服务的治理类似，也能对不同业务的数据进行分级管理、维护、监控、扩展等
-- 高并发场景下，垂直切分一定程度的提升IO、数据库连接数、单机硬件资源的瓶颈
+- 高并发场景下，垂直切分一定程度的提升了IO、数据库连接数、单机硬件资源的瓶颈
 #### 缺点
 
 - 分库后无法Join，只能通过接口聚合方式解决，提升了开发的复杂度
