feat: Node 核心模块

--- a/src/blogs/Node/核心模块/children_process 子进程/2. 创建子进程.md
+++ b/src/blogs/Node/核心模块/children_process 子进程/2. 创建子进程.md
@@ -1,54 +1,176 @@
 # 创建子进程
+## options 参数说明
+|配置项|类型|默认值|描述|
+|---|---|---|---|
+|`cwd`|`string`|`undefined`|子进程的当前工作目录。如果未指定，则继承父进程的当前目录。|
+|`env`|`Object`|`process.env`|为子进程指定环境变量。默认为父进程的环境变量。|
+|`encoding`|`string`|`'utf-8'`|编码方式|
+|`shell`|--|--|--|
+|`stdio`|`string` 或 `Array`|`'pipe'`|配置子进程的标准输入、标准输出和标准错误流的类型。|
+|`timeout`|`number`|`0`|子进程的最长执行时间，单位为毫秒。超时后将会杀死子进程。`0` 表示无超时限制。|
+|`uid`|`number`|`undefined`|设置子进程的用户标识（UID），仅在 POSIX 平台上有效。|
+|`gid`|`number`|`undefined`|设置子进程的组标识（GID），仅在 POSIX 平台上有效。|
+|`detached`|`boolean`|`false`|如果为 `true`，让子进程独立于父进程之外运行。同样在不同平台上表现有差异。使子进程在父进程退出后继续运行。|
+|`windowsHide`|`boolean`|`false`|在 Windows 平台上，如果设置为 `true`，可以隐藏子进程的窗口。|
+|`signal`|AbortSignal 实例|`null`|允许使用 AbortSignal 中止子进程|
+|`killSignal`|`string`|`'SIGTERM'`|杀死进程的信号。<br /> 1. 如果 timeout 大于 0，当子进程运行超过 timeout 毫秒，就会给进程发送 killSignal 指定的信号（比如 SIGTERM）<br /> 2. 如果运行没有出错，error 为 null。如果运行出错，`error.code`就是退出代码（exist code），`error.signal`会被设置成终止进程的信号。（比如 CTRL+C 时发送的 SIGINT）|
+|`maxBuffer`|`number`|200*1024（即200k）|标准输出、错误输出最大允许的数据量（单位为字节），如果超出的话，子进程就会被杀死。|
+
+### `options.stdio`
+用于配置子进程的标准输入、标准输出和标准错误流。该参数是一个由三个元素组成的数组，看一个例子
+```javascript
+const fs = require('fs');
+const { spawn } = require('child_process');
+const ins = fs.openSync('./in.log', 'a');
+const out = fs.openSync('./out.log', 'a');
+const err = fs.openSync('./err.log', 'a');
+
+const subprocess = spawn('prg', [], {
+  detached: true,
+  stdio: [ ins, out, err ]
+});
+```
+由此可知，`options.stdio`数组中的三个元素分别用于对管道 stdin、stdout 和 stderr 进行设置。通常情况下，可以通过`subprocess.stdio[0]`、`subprocess.stdio[1]`和`subprocess.stdio[2]`分别访问到这三个管道对象。
+
+常见的值如下：
+#### `'pipe'`
+一个字符串参数，这是默认值。设置它相当于为子进程创建了自己的管道，并将子进程的管道暴露给父进程的管道，从而可以通过该管道将输出流向父进程。
+
+#### `'ipc'`
+字符串参数，设置该值以后便是创建一个 IPC 管道，通过该管道可以父进程之间进行消息消息传递；一个 ChildProcess 最多只能有一个 IPC stdio。特点是：
+1. 一旦设置为`ipc`，那么就为父进程激活了`subprocess.send()`方法，父进程就可以直接通过这个方法给子进程“实时的”发送消息了。
+2. 如果该子进程是 Node.js 进程，还会分别在子进程中激活`process.send()`、`process.disconnect()`、`process.on('disconnect’)`和`process.on('message’)`四个方法
+   1. `process.send()`允许子进程给父进程发送消息。
+   2. 如果子进程使用的是 IPC 管道，那么需要显示的调用`process.on(‘disconnet’)`来关闭与父进程之间的 IPC 管道，这样子进程才能优雅的关闭。
+
+#### `'ignore'`
+字符串参数，忽略子进程输出，因此当 ignore 时 child.stdout 是 null。
+#### 'inherit'
+表示使用父进程的管道，因此可以直接看到输出。相当于设置为父进程的`process.stdin`、`process.stdout`和`process.stderr`
+#### `<Stream> 对象`
+Stream 对象参数，一个由 tty、file、socket 或者一个 pipe 所构成可读或者可写的 Stream 对象
+```javascript
+const fs = require('fs')
+const { spawn } = require('child_process')
+const out = fs.openSync('./out.log', 'a')
+const err = fs.openSync('./err.log', 'a')
+
+const subprocess = spawn('prg', [], {
+  stdio: [ 'ignore', out, err ]
+})
+```
+#### 正整数
+该正整数表示父进程一个开启的文件编号。
+
+每个进程都有一个文件描述符表，其中文件句柄 0 表示标准输入（stdin），1 表示标准输出（stdout），2 表示标准错误输出（stderr）。
+
+为了定义上的简便，可以使用下述的方式进行参数设定：
+- `'pipe'`等价于设置·['pipe’, 'pipe’, 'pipe’]·也是默认的配置
+- `'ignore’`等价于设置`['ignore’, 'ignore’, 'ignore’]`
+- `'inherit’`等价于设置`[process.stdin, process.stdout, process.stderr]`
+### `options.shell`
+对于`exec`方法来说：shell 参数是一个字符串，用于指定要使用的 shell。Unix 上默认是`/bin/sh`，Windows 上默认是`cmd.exe`
+
+对于`spawn`、`execFile`方法来说：shell 参数是一个字符串或布尔值：
+- 字符串：用于指定要使用的 shell
+- 布尔值：
+  - 如果为 true，代表命令将会在 shell 中执行，Node 会使用系统默认的 shell脚本 来执行指定的命令。Unix 上默认是`/bin/sh`，Windows 上默认是`cmd.exe`。
+  - 默认为 false，命令将不会在 shell 中执行。
+
+”命令将不会在 shell 中执行“意味着：
+1. **直接执行可执行文件：** Node 将会直接调用可执行文件，而不是先启动一个shell然后在shell中运行命令。
+2. **无法使用 shell 特性：** 由于不通过 shell 执行，所以无法利用 shell 提供的各种便利特性，例如管道(`|`)、文件重定向(`>`、`<`)、通配符(`*`)、环境变量扩展等。
+3. **避免了 shell 的解释差异：** 不同的 shell（如bash、sh、cmd.exe等）可能会有不同的解释方式和内置命令。直接执行命令可以避免这些差异，减少跨平台兼容性问题。
+5. **增强安全性：** 由于命令不是在 shell 中执行，所以减少了因为 shell 注入攻击等安全风险。当你的命令或参数来自不受信任的用户输入时，这一点尤其重要。
+6. **需要完整的命令路径：** 如果不通过 shell，你可能需要提供完整的命令路径，或确保命令在系统的PATH环境变量中。
+
+### `options.signal`
+允许使用 AbortSignal 中止子进程。
+
+如果启用了 signal 选项，则在相应的 AbortController 上调用`.abort()`与在子进程上调用`.kill()`类似，只是传给回调的错误将是 AbortError：
+```javascript
+const { spawn } = require('node:child_process')
+const controller = new AbortController()
+const { signal } = controller
+const grep = spawn('grep', ['ssh'], { signal })
+grep.on('error', (err) => {
+  // This will be called with err being an AbortError if the controller aborts
+});
+controller.abort() // Stops the child process
+```
+### `options.detached`
+该属性可以让子进程脱离父进程独立运行，不过在 Windows 和 Linux 系统上的实现方式不同：
+- Linux：所创建的子进程实际上是一个新的进程，也就是说，该子进程与原来的父进程之间是平级关系。
+- Windows：子进程可以在父进程结束之后依然执行，不过子进程和父进程之间的关系依然是存在的。
+
+为什么需要这样的场景呢？为什么要让一个子进程脱离父进程执行呢？其实这是因为当某个子进程需要长时间执行的时候，比如批处理，如果让子进程脱离父进程执行的话，可以节约大量的系统资源。
+
+但设置了`options.detached = true`后，父进程仍会尝试等待子进程结束，因为父进程始终通过 reference count（引用计数）与子进程保持关联。所以还需要额外的措施来确保子进程完全脱离父进程。下面来看具体的步骤：
+1. 需要让子进程显式地调用`subprocess.unref()`方法，以使父进程不再通过 reference count 记录自己。
+2. 除了这两步之外，还需要斩断父进程与子进程通讯的 IPC 通道，有两种方式：
+   1. 方式一：在设置`stdio`属性的时候将其设置为`false`明确的告诉父进程，子进程`stdio`不与父进程通讯。
+   2. 方式二：将子进程的输出重定向到其它的文件中
+
+#### 举例
+例子一：不使用父进程的 stdio 对象，这样做虽然便捷但是最大的问题是，无法获取子进程的输出。
+```javascript
+const { spawn } = require('child_process');
+
+const subprocess = spawn(process.argv[0], ['child_program.js'], {
+  detached: true,
+  stdio: 'ignore'
+});
+
+subprocess.unref();
+```
+例子二：重定向子进程的 stdio 到文件中
+```javascript
+onst fs = require('fs');
+const { spawn } = require('child_process');
+const out = fs.openSync('./out.log', 'a');
+const err = fs.openSync('./err.log', 'a');
+
+const subprocess = spawn('prg', [], {
+  detached: true,
+  stdio: [ 'ignore', out, err ]
+});
+
+subprocess.unref();
+```
+### `child_process.fork()`特有配置项
+- execPath：用来创建子进程的可执行文件，默认是`/usr/local/bin/node`
+   - 也就是说，可通过`execPath`来指定具体的 node 可执行文件路径（比如多个 node 版本）
+- execArgv：传给可执行文件的字符串参数列表。默认是`process.execArgv`，跟父进程保持一致
+- silent：如果为 true，则子进程的标准输入、标准输出和标准错误将通过管道（'pipe'）传输到父进程，否则子进程直接使用父进程的stdio，因此可以直接看到输出（'inherit'）
+- stdio：用于配置在父进程和子进程之间建立的管道，如果声明了 stdio，则会覆盖 silent 选项的设置。
+  - 如果使用数组，则它必须且只能包含一个值为`'ipc'`，否则将抛出错误。例如`[0, 1, 2, 'ipc']`。
+### `child_process.spawn()`特有配置项
+- argv0：显式设置发送给子进程的`argv[0]`的值。如果未指定，这将设置为 command
+  - macOS、Linux平台将使用`argv[0]`的值作为进程开头，而其他平台（Windows、SunOS）将使用 command。
+  - Node.js 在启动时会用`process.execPath`覆盖`argv[0]`，因此 Node.js 子进程中的`process.argv[0]`的值不是`options.argv0`设置的值。如果要使用，需要通过`process.argv0`获取。
+
 ## `child_process.exec()`
+衍生一个子进程并在子进程中执行命令，通常用于立马返回结果且结果数据较小的命令。默认情况下，最大允许的标准输出和标准错误大小为1024 * 1024（200k）。
+
+spawn 采用流的方式来输出命令的执行结果，而exec是将命令的执行结果缓存起来统一放在回调函数的参数里面，因此exec只适用于命令执行结果数据小的情况。
 ### 基本语法
 ```javascript
 child_process.exec(command[, options][, callback])
 ```
-衍生一个子进程，然后在衍生的子进程中里执行命令。
-- command 是一个内置命令的字符串，包含了命令的参数。
+#### 接收的参数
+- command：是一个内置命令的字符串，包含了命令的参数。
   - 命令一般是子进程中的内置命令，如`ls`、`cat`等，也可以是 shell 脚本组成的文件，如`start.sh`等。
-- 可以使用 callback。
-  - 执行完成后，将`stdout`、`stderr`作为参数传入回调方法
-  - spawn 采用流的方式来输出命令的执行结果，而exec是将命令的执行结果缓存起来统一放在回调函数的参数里面，因此exec只适用于命令执行结果数据小的情况。
-### options 参数说明
-| 配置项           | 类型                   | 默认值           | 描述    |
-| --- | --- | --- | --- |
-| `cwd`         | `string`             | `undefined`   | 子进程的当前工作目录。如果未指定，则继承父进程的当前目录。|
-| `env`         | `Object`             | `process.env` | 为子进程指定环境变量。默认为父进程的环境变量。|
-|`encoding`| `string`|`'utf-8'`| 编码方式|
-| `shell`       | -- | -- | --|
-| `stdio`       | `string` 或 `Array`   | `'pipe'`      | 配置子进程的标准输入、标准输出和标准错误流。 |
-| `timeout`     | `number`             | `0`           | 子进程的最长执行时间，单位为毫秒。超时后将会杀死子进程。`0` 表示无超时限制。|
-| `uid`         | `number`             | `undefined`   | 设置子进程的用户标识（UID），仅在 POSIX 平台上有效。|
-| `gid`         | `number`             | `undefined`   | 设置子进程的组标识（GID），仅在 POSIX 平台上有效。|
-| `detached`    | `boolean`            | `false`       | 如果为 `true`，让子进程独立于父进程之外运行。同样在不同平台上表现有差异。使子进程在父进程退出后继续运行。|
-| `windowsHide` | `boolean`            | `false`       | 在 Windows 平台上，如果设置为 `true`，可以隐藏子进程的窗口。|
-|`killSignal`| `string`|`'SIGTERM'`|杀死进程的信号。<br /> 1. 如果 timeout 大于 0，当子进程运行超过 timeout 毫秒，就会给进程发送 killSignal 指定的信号（比如 SIGTERM）<br /> 2. 如果运行没有出错，error 为 null。如果运行出错，`error.code`就是退出代码（exist code），`error.signal`会被设置成终止进程的信号。（比如 CTRL+C 时发送的 SIGINT）|
-|`maxBuffer`|`number`|200*1024（即200k）|标准输出、错误输出最大允许的数据量（单位为字节），如果超出的话，子进程就会被杀死。|
-#### `options.stdio`
-用于配置子进程的标准输入、标准输出和标准错误流。有三个可能的值：
-- pipe：通过管道将输出流向父进程
-- ignore：忽略子进程输出，因此当 ignore 时 child.stdout 是 null。
-- inherit：子进程直接使用父进程的stdio，因此可以直接看到输出
+- callback：回调参数，接收三个参数：
+  - err：异常信息，如果没有异常，则为`null`
+  - stdout：标准输出，默认是`utf8`类型数据
+  - stderr：标准异常，默认是`utf8`类型数据，如果没有异常，则为空字符串
+    - 注意：stdout、stderr 会默认在结尾加上换行符
 
-
-由于stdio管道有三个（stdin, stdout, stderr）因此 stdio 的三个可能的值其实是数组的一种简写：
-- pipe 相当于`['pipe', 'pipe', 'pipe']`（默认值）
-- ignore 相当于`['ignore', 'ignore', 'ignore']`
-- inherit 相当于`[process.stdin, process.stdout, process.stderr]`
-#### `options.shell`
-对于`exec`方法来说：shell 参数是一个字符串，用于指定要使用的 shell，unix 上默认是`/bin/sh`，windows 上默认是`cmd.exe`
-
-对于`spawn`方法来说：shell 参数是一个字符串或布尔值：
-- 布尔值：
-  - 如果为 true，表示衍生一个新进程，command 可以是一个内置命令的字符串，包含了命令的参数，同`exec`方法一致。
-  - 默认为 false，不会衍生新进程，而是替换当前进程。
-- 字符串：用于指定要使用的 shell，unix 上默认是`/bin/sh`，windows 上默认是`cmd.exe`
-
-### 例子1: 基本用法
-1. 执行成功，error 为 null；执行失败，error 为 Error 实例；error.code 为错误码；
-2. stdout、stderr 为标准输出、标准错误；默认是字符串，除非 options.encoding 为 buffer
-   1. 注意：stdout、stderr 会默认在结尾加上换行符
+### 例子
+#### 例子1: 基本用法
+1. 执行成功，error 为 null。
+2. 执行失败，error 为 Error 实例；error.code 为错误码。
+3. stdout、stderr 为标准输出、标准错误；默认是字符串，除非 options.encoding 为 buffer
 ```javascript
 const { exec } = require('child_process')
 
@@ -85,7 +207,7 @@ exec('ls', {cwd: __dirname + '/dir'}, (error, stdout, stderr) => {
     stderr: 
  */
 ```
-### 例子2: 子进程输出/错误监听
+#### 例子2: 监听子进程输出/错误
 除了 例子1 中支持回调函数获取子进程的输出和错误外，还提供 stdout 和 stderr 对输出和错误进行监听，示例如下所示
 ```javascript
 // dir/test.js
@@ -105,20 +227,21 @@ child.stderr.on('data', err => {
 // 输出：
 // stdout: dir/test.js被执行
 ```
+
+
 ## `child_process.execFile()`
+用于执行指定的**可执行文件**，默认情况下不会衍生新的子进程，**指定的可执行文件将直接替换当前进程的内容**，所以会比`child_process.exec()`稍微更高效。
 ### 基本语法
 ```javascript
 child_process.execFile(file[, args][, options][, callback])
 ```
-跟`exec()`类似，`options`参数与`exec`一样
+#### 接收的参数
+- `file`：指定要运行的**可执行文件**的名称或路径，如`node.exe`或`node`命令，不能是`start.js`这种脚本文件。
+- `args`：传递给**可执行文件**的参数；不能放在第一个参数中，只能作为第二个参数传递
+- `callback`：和`exec`一致
 
-与 exec 的不同是：
-- `file`参数是要运行的**可执行文件**的名称或路径，如`node.exe`或`node`命令，不能是`start.js`这种脚本文件。
-- **命令参数**不能放在第一个参数重，只能作为第二个参数传递
-- 默认情况下不会衍生新的子进程，**指定的可执行`file`参数将直接作为新进程执行**
-   - 所以会比`child_process.exec()`稍微更高效
-- 在 Windows 系统中，由于`.bat`和`.cmd`文件在没有终端的情况下不能单独执行的，所以不能使用 execFile 来执行；而应该使用 exec 或下面介绍的 spawn 来执行，并且执行它们时，需要将 shell 设置为 true。
-### 例子1：执行 node 文件
+### 例子
+#### 例子1：执行 node 文件
 ```javascript
 // dir/test.js
 console.log('dir/test.js被执行')
@@ -137,15 +260,13 @@ execFile('node', ['./dir/test1.js'], (error, stdout, stderr) => {
 // 输出：
 // stdout: dir/test.js被执行
 ```
-### 例子2：执行 shell 脚本文件
-需要注意的是，执行 shell 脚本的时候，并没有重新开一个进程，而是讲当前进程的内容全部替换为可执行文件的内容。
+#### 例子2：执行 shell 脚本文件
+需要注意的是，执行 shell 脚本的时候，并没有重新开一个进程，而是将当前进程的内容全部替换为可执行文件的内容。
 
-比如：在根目录下运行`execFile`命令执行脚本，在`./dir/test2.sh`脚本中执行与`test2.sh`同目录的`test1.js`文件，不能直接写成`node ./test1.js`，会找不到文件，应该从根目录去寻找
 
 注意：shell 脚本文件中如果需要访问 node 环境中的变量，可以将变量赋值给`process.env`，这样在 shell 脚本中就可以通过`$变量名`进行直接访问
 ```javascript
 const { execFile } = require('child_process')
-
 // 执行 shell 脚本
 // 在 shell 脚本中可以访问到 process.env 的属性 
 process.env.DIRNAME = __dirname
@@ -168,27 +289,27 @@ node $DIRNAME/dir/test1.js
 console.log('test1 输出...')
 ```
 上面的例子中，当执行`node $DIRNAME/dir/test1.js`时，没有衍生新进程，而是当前进程的内容被替换成了可执行文件`test2.sh`的内容。
-## child_process.fork()
+
+## `child_process.fork()`
+衍生一个 Node.js 进程，用于执行 JavaScript 文件，它允许父进程和子进程通过一个内置的通信通道（IPC）进行双向通信。
+
+衍生的 Node.js 子进程独立于父进程，除了两者之间建立的 IPC 通信通道。每个进程都有自己的内存，具有自己的 V8 实例。由于需要额外的资源分配，不建议衍生大量子 Node.js 进程。
 ### 基本语法
 ```javascript
 child_process.fork(modulePath[, args][, options])
 ```
-- modulePath：要在 node 子进程中运行的模块，由于是 node.js 的进程，所以可以是`start.js`这种`js`文件
-- args：字符串参数列表
+#### 接收的参数
+- modulePath：要在 node 子进程中运行的模块，由于是 Node.js 的进程，所以可以是`start.js`这种`js`文件
+- args：传递给**Node 进程**的参数；不能放在第一个参数中，只能作为第二个参数传递
 
 注意：
 - 该接口专门用于衍生新的 Node.js 进程
 - 无回调，参数要以第二个参数传入
 - 返回的子进程将内置一个额外的 IPC 通信通道，允许消息在父进程和子进程之间来回传递
-- `fork`其实是`spawn`的一个特殊例子，因为`fork`第一个参数是一个被执行脚本的路径。args 和 options 参数都和 spawn 一致。但是 fork 执行的是一个 node module，所以 fork 提供了一个特性，即在父子进程之间建立一个 IPC 通道，使父子进程之间通过`send()`方法来互相发送信息
-### options 参数
-其中与 exec 重复的参数就不重复介绍
-- execPath：用来创建子进程的可执行文件，默认是`/usr/local/bin/node`
-   - 也就是说，可通过`execPath`来指定具体的 node 可执行文件路径（比如多个 node 版本）
-- execArgv：传给可执行文件的字符串参数列表。默认是`process.execArgv`，跟父进程保持一致
-- silent：如果为 true，则子进程的标准输入、标准输出和标准错误将通过管道传输到父进程，否则它们将从父进程继承
-- stdio：用于配置在父进程和子进程之间建立的管道，如果声明了 stdio，则会覆盖 silent 选项的设置
-### 例子1：silent
+- 与`spawn`一样，返回 ChildProcess 对象。返回的 ChildProcess 将有额外的内置通信通道，允许消息在父进程和子进程之间来回传递。
+
+### 例子
+#### 例子1：silent 介绍
 ```javascript
 const { fork } = require('child_process')
 
@@ -212,9 +333,8 @@ child3.stdout.on('data', function (data) {
   console.log(data)
 })
 ```
-### 例子2：父子进程传递消息
+#### 例子2：IPC 通道，父子进程传递消息
 ```javascript
-// IPC 通道
 // parent.js
 const child_process = require('child_process')
 
@@ -240,24 +360,22 @@ process.send({from: 'child'})
 ```
 
 ## `child_process.spawn()`
+使用给定的`command`和`args`中的命令行参数衍生新进程。
 ### 基本语法
 ```javascript
-// command：要执行的命令
 child_process.spawn(command[, args][, options])
 ```
+#### 接收的参数
 - command：要执行的命令
 - args：字符串参数列表
-- options 参数
 ```javascript
 const { spawn } = require('child_process');
 
 //'ls' 是命令，['-lh', '/usr'] 是一个参数数组，它们将被传递给新的进程
 const child = spawn('ls', ['-lh', '/usr']); // 命令: ls, 参数: ['-lh', '/usr']
 ```
-### options参数
-跟`exec()`类似，与`options`参数基本一致
-- argv0：显式地设置发送给子进程的`argv[0]`的值， 如果没有指定，则会被设置为 command 的值
-### 例子1：基础例子
+### 例子
+#### 例子1：基础例子
 ```javascript
 const spawn = require('child_process').spawn;
 const ls = spawn('ls', ['-al']);
@@ -278,7 +396,7 @@ ls.on('close', function(code){
 });
 
 ```
-### 例子2：声明stdio
+#### 例子2：声明stdio
 父子进程共用一个输出管道
 ```javascript
 const spawn = require('child_process').spawn
@@ -290,7 +408,7 @@ ls.on('close', function(code){
     console.log('child exists with code: ' + code)
 })
 ```
-### 例子3：错误处理
+#### 例子3：错误处理
 包含两种场景，这两种场景有不同的处理方式：
 - 场景1：命令本身不存在，创建子进程报错。
 - 场景2：命令存在，但运行过程报错。
