--- a/src/blogs/Node/核心模块/Buffer 缓冲区/3. 操作缓冲区.md
+++ b/src/blogs/Node/核心模块/Buffer 缓冲区/3. 操作缓冲区.md
@@ -1,34 +1,53 @@
-# 读写缓冲区
-### 写入缓冲区
-#### 方式一：单个元素赋值
-Buffer 类似于数组，可以直接赋值，默认是10进制，0x表示16进制，也可以是2进制
+# 操作缓冲区
+## 基础 API
+- `Buffer.isBuffer(obj)`：判断对象是否为 Buffer
+- `Buffer.isEncoding(obj)`：判断 Buffer 对象编码
+- `buf.indexOf(string | Buffer | integer)`：和数组的 indexOf 类似，返回某字符串、acsii 码或者某 buffer 实例在该 buffer 实例中的位置
+- `buf.buffer`获取 Buffer 的 ArrayBuffer 实例，指向其底层的 ArrayBuffer对象 对应的内存
+- `Buffer.poolSize`表示Node为我们预创建的Buffer池子有多大，它的默认值是 8192，也就是8KB。
+  - Node在启动的时候，它会为我们预创建一个8KB大小的内存池，当用户用某些API(例如`Buffer.alloc`)创建 Buffer 实例的时候可能会用到这个预创建的内存池以提高效率
+## 写入缓冲区
+### 方式一：单个元素赋值
+Buffer 类似于数组，可以直接赋值：
+- 默认是10进制
+- 0b开头表示 2 进制
+- 0x开头表示 16 进制
 ```javascript
 const buf = Buffer.alloc(3)
 buf[0] = 89
-buf[1] = 11111101
-buf[3] = 0xaa
-```
-Buffer 对象可以存储不同编码类型的字符串转码的值，调用`write`方法可以实现
-#### 方式二：write 方法
-`buf.write(string[, offset[, length]][, encoding])`<br />返回实际写入的大小。如果 Buffer 空间不足， 则只写入部分字符串，并从头开始替换旧值<br />参数描述如下：
+buf[1] = 0b11111101 // 十进制 253。由于这个值超出了单个字节（8位）的最大值255，Node.js会取这个值的最低8位进行赋值。因此，实际上赋值的是11111101的二进制表示的最低8位，即101的十进制值189。
+buf[3] = 0xaa // 十进制 170
 
+console.log(buf)
+// 打印： <Buffer 59 fd 00>
+```
+Node.js 在存储数值到 Buffer 时，并不直接区分数值是以10进制、2进制还是16进制的形式给出。实际上，无论是哪种进制的表示，Node.js 都会将其转换成二进制形式存储在 Buffer 中。这是因为计算机底层只识别二进制数据。
+
+### 方式二：write 方法
+Buffer 对象通过调用`write`方法可以将不同编码类型的字符串存储到缓冲区中。返回实际写入的大小。如果 Buffer 空间不足，则从头开始替换旧值。
+```javascript
+buf.write(string[, offset[, length]][, encoding])
+```
+参数描述如下：
 - string - 写入缓冲区的字符串
 - offset - 缓冲区开始写入的索引值，默认为 0 
 - length - 写入的字节数，默认为`buffer.length`
 - encoding - 使用的编码。默认为 'utf8' 
 ```javascript
 const buf = Buffer.alloc(256)
-const len = buf.write("xxx")
-console.log("写入字节数："+  len) // 写入字节数：3
+const len = buf.write('xxx')
+console.log('写入字节数：' + len) // 写入字节数：3
 
-// 如果 buffer 空间不足， 则只写入部分字符串，并从头开始替换旧值
+// 如果 Buffer 空间不足，则从头开始替换旧值
 const buf3 = Buffer.from('abc')
-buf3.write("de")
+buf3.write('de')
 console.log(buf3.toString()) // dec
 ```
-### 读取缓冲区
-#### 方式一：读取某个元素
-直接打印Buffer显示的是两位的16进制，打印某一个元素显示的是10进制。可通过 **buf[x].toString(进制) **的方式打印其他进制
+## 读取缓冲区
+### 方式一：读取某个元素
+默认情况下，直接打印 Buffer 显示的是两位的16进制，打印某一个元素显示的是10进制。
+
+如果需要将其转换成其他编码方式可通过`toString`方法，`buf[x].toString(进制)`的方式打印其他进制。
 ```javascript
 const buf = Buffer.alloc(1)
 buf[0] = 0xaa
@@ -37,36 +56,45 @@ console.log(buf[0]) // 170
 console.log(buf[0].toString(10))  // '170'
 console.log(buf[0].toString(16)) // 'aa'
 ```
-如果需要将其转换成其他编码方式可通过 toString 方法
-#### 方式二：toString 方法
-`buf.toString([encoding[,start[,end]]])`解码缓冲区数据并使用指定的编码返回字符串<br />参数描述如下：
-
+### 方式二：toString 方法
+用于解码缓冲区数据，并使用指定的编码返回字符串
+```javascript
+buf.toString([encoding[,start[,end]]])
+```
+参数描述如下：
 - encoding - 使用的编码。默认为 'utf8' 
 - start - 指定开始读取的索引位置，默认为 0
 - end - 结束位置，默认为缓冲区的末尾
 ```javascript
 const buf = Buffer.alloc(26)
 for (let i = 0; i < 26; i++) {
-  buf[i] = i + 97
+    buf[i] = i + 97
 }
- 
-console.log(buf.toString('ascii'))     // 输出: abcdefghijklmnopqrstuvwxyz
-console.log(buf.toString('ascii', 0, 5))  // 输出: abcde
-console.log(buf.toString('utf8', 0, 5))    // 输出: abcde
+
+console.log(buf.toString('ascii')) // 输出: abcdefghijklmnopqrstuvwxyz
+console.log(buf.toString('ascii', 0, 5)) // 输出: abcde
+console.log(buf.toString('utf8', 0, 5)) // 输出: abcde
 console.log(buf.toString(undefined, 0, 5)) // 使用 'utf8' 编码, 并输出: abcde
 ```
-#### Buffer 和 string 转换
-`Buffer.from(string [, encoding])` 字符串转为 Buffer
+### Buffer 和字符串相互转换
+#### 字符串转 Buffer
+```javascript
+Buffer.from(string [, encoding])
+```
 ```javascript
 const buf1 = Buffer.from('test', 'utf-8') // <Buffer 74 65 73 74>
 ```
-`buf.toString([encoding[, start[, end]]])`  Buffer 实例的 toString 方法可以将 Buffer 转为字符串
+#### Buffer 转字符串
+```javascript
+buf.toString([encoding[, start[, end]]])
+```
+Buffer 实例的 toString 方法可以将 Buffer 转为字符串
 ```javascript
 const buf1 = Buffer.from('test', 'utf-8')
 console.log(buf1.toString()) // test
 console.log(buf1.toString('hex')) // 74657374
 ```
-#### Buffer 转 JSON
+### Buffer 转 JSON
 ```javascript
 var buf = Buffer.from('xxx')
 var json = buf.toJSON(buf)
@@ -74,18 +102,17 @@ var json = buf.toJSON(buf)
 console.log(json)
 // { type: 'Buffer', data: [ 120, 120, 120 ] }
 ```
-# 直接赋值和读取缓冲区
+## 缓冲区合并
+返回一个将多个 Buffer 实例合并后的**新 Buffer 实例**。这个新实例不会和之前的 Buffer 实例共享同一片内存。它通过拷贝原有 Buffer 实例中的数据到新实例中来实现 Buffer 的合并。
 ```javascript
-
-console.log(buf) // <Buffer c7 bd>
-console.log(buf[0]) // 199
-console.log(buf[1]) // 189
+Buffer.concat(list[, totalLength])
 ```
-# 缓冲区合并
-`Buffer.concat(list[, totalLength])`返回一个将多个 Buffer 实例合并后的**新 Buffer 实例**<br />参数描述如下：
+参数如下：
+- list：用于合并的 Buffer 对象数组列表
+- totalLength：指定合并后 Buffer 对象的总长度
 
-- list - 用于合并的 Buffer 对象数组列表
-- totalLength - 指定合并后 Buffer 对象的总长度
+返回值：
+- 返回一个将多个 Buffer 实例合并后的**新 Buffer 实例**。
 ```javascript
 const buf1 = Buffer.from('a')
 const buf2 = Buffer.from('b')
@@ -94,10 +121,23 @@ const buf3 = Buffer.from('c')
 const buf = Buffer.concat([buf1, buf2, buf3])
 console.log(buf) // <Buffer 61 62 63>
 ```
-# 缓冲区比较
-`buf.compare(otherBuffer)`返回一个数字，表示 buf 在 otherBuffer 之前、之后或相同<br />参数描述如下：
+## 缓冲区比较
+用于比较两个 Buffer 对象。
+```javascript
+sourceBuffer.compare(target[, targetStart[, targetEnd[, sourceStart[, sourceEnd]]]])
+```
+参数如下：
+- target：要比较的目标 Buffer
+- targetStart：（可选）目标 Buffer 的开始比较位置，默认为 0
+- targetEnd：（可选）目标 Buffer 的结束比较位置（不包括该位置），默认为 target.length
+- sourceStart：（可选）源 Buffer 的开始比较位置，默认为 0
+- sourceEnd：（可选）源 Buffer 的结束比较位置（不包括该位置），默认为 buf.length
 
-- otherBuffer - 与 buf 对象比较的另外一个 Buffer 对象
+返回值：
+- 根据比较结果返回一个整数，整数描述如下：
+  - 如果源 Buffer 在排序顺序上位于目标 Buffer 之前，则返回 -1；
+  - 如果源 Buffer 在排序顺序上位于目标 Buffer 之后，则返回 1；
+  - 如果两个 Buffer 相等，则返回 0。
 ```javascript
 const buffer1 = Buffer.from('ABC')
 const buffer2 =Buffer.from('ABCD')
@@ -112,13 +152,21 @@ if(result < 0) {
 }
 // 输出 ABC 在 ABCD 之前
 ```
-# 拷贝缓冲区
-`source.copy(target[, targetStart[, sourceStart[, sourceEnd]]])`<br />将 source （部分）内容**深拷贝**给 target，没有返回值<br />参数描述如下：
+## 拷贝缓冲区
+用于将数据从一个 Buffer 对象**深拷贝**到另一个 Buffer 对象中。
 
-- targetBuffer - 要拷贝的 Buffer 对象
-- targetStart - 数字, 可选, 默认: 0
-- sourceStart - 数字, 可选, 默认: 0
-- sourceEnd - 数字, 可选, 默认: buffer.length
+也就是说这个方法不会改变源 Buffer 的内容，也不会共享内存，复制的是数据的副本。
+```javascript
+source.copy(target[, targetStart[, sourceStart[, sourceEnd]]])
+```
+参数如下：
+- target：目标 Buffer 对象，即数据将被复制到这个 Buffer 中。
+- targetStart：（可选）目标 Buffer 的开始写入位置，默认为 0。
+- sourceStart：（可选）源 Buffer 的开始复制位置，默认为 0。
+- sourceEnd：（可选）源 Buffer 的结束复制位置（不包括该位置），默认为 source.length。
+
+返回值：
+- 没有返回值
 ```javascript
 const buffer1 = Buffer.from('ABC')
 // 拷贝一个缓冲区
@@ -127,15 +175,24 @@ buffer1.copy(buffer2)
 console.log(buffer1.toString()) // ABC
 console.log(buffer2.toString()) // ABC
 ```
-# 缓冲区裁剪
-`buf.slice([start[, end]])`，返回一个新的缓冲区，**它和旧缓冲区指向同一块内存**，但是从索引 start 到 end 的位置剪切
+## 缓冲区裁剪
+用于创建一个指定范围的新 Buffer 切片，但这个新切片是原始 Buffer 的视图，而不是副本。这意味着新切片和原始 Buffer 共享相同的内存空间，修改新切片的内容也会影响到原始 Buffer。
+```javascript
+buf.slice([start[, end]])
+```
+参数如下：
+- start：（可选）切片开始的索引位置，默认为 0。
+- end：（可选）切片结束的索引位置（不包括该位置），默认为 buf.length。
+
+返回值：
+- 返回一个新的 Buffer 对象，它是原始 Buffer 的一个切片。
 ```javascript
 const buffer1 = Buffer.from('ABCD')
 // 剪切缓冲区
 const buffer2 = buffer1.slice(0, 2)
 console.log(buffer2.toString()) // AB
 ```
-# 缓冲区长度
+## 缓冲区长度
 `buf.length`返回 Buffer 中**所占据的内存长度**
 ```javascript
 var buffer = Buffer.from('ABCD')
